--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,158 +1,10 @@
-# C/C++ with GCC
-# Build your C/C++ project with GCC using make.
-# Add steps that publish test results, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/c-cpp/gcc
-
-pr:
-- master
-- 202???
-- 201???
-
 trigger:
   batch: true
   branches:
     include:
-    - master
-    - 202???
-    - 201???
+    - puff_master
 
-# this part need to be set in UI
-schedules:
-- cron: "0 0 * * 6"
-  displayName: Weekly build
-  branches:
-    include:
-    - master
-    - 202???
-    - 201???
-  always: true
+pool: mypool
 
-parameters:
-  - name: debian_version
-    type: string
-    default: bookworm
-
-variables:
-  - name: BUILD_BRANCH
-    ${{ if eq(variables['Build.Reason'], 'PullRequest') }}:
-      value: $(System.PullRequest.TargetBranch)
-    ${{ else }}:
-      value: $(Build.SourceBranchName)
-
-stages:
-- stage: Build
-
-  jobs:
-  - template: .azure-pipelines/build-template.yml
-    parameters:
-      arch: amd64
-      pool: sonicbld-1es
-      sonic_slave: sonic-slave-${{ parameters.debian_version }}
-      common_lib_artifact_name: common-lib
-      swss_common_artifact_name: sonic-swss-common-${{ parameters.debian_version }}
-      sairedis_artifact_name: sonic-sairedis-${{ parameters.debian_version }}
-      artifact_name: sonic-swss-${{ parameters.debian_version }}
-      archive_pytests: true
-      archive_gcov: true
-
-- stage: BuildAsan
-  dependsOn: []
-  jobs:
-  - template: .azure-pipelines/build-template.yml
-    parameters:
-      arch: amd64
-      pool: sonicbld-1es
-      sonic_slave: sonic-slave-${{ parameters.debian_version }}
-      common_lib_artifact_name: common-lib
-      swss_common_artifact_name: sonic-swss-common-${{ parameters.debian_version }}
-      sairedis_artifact_name: sonic-sairedis-${{ parameters.debian_version }}
-      artifact_name: sonic-swss-asan-${{ parameters.debian_version }}
-      asan: true
-
-- stage: BuildArm
-  dependsOn: Build
-  condition: succeeded('Build')
-  jobs:
-  - template: .azure-pipelines/build-template.yml
-    parameters:
-      arch: armhf
-      timeout: 240
-      pool: sonicbld-armhf
-      sonic_slave: sonic-slave-${{ parameters.debian_version }}-armhf
-      common_lib_artifact_name: common-lib.armhf
-      swss_common_artifact_name: sonic-swss-common-${{ parameters.debian_version }}.armhf
-      sairedis_artifact_name: sonic-sairedis-${{ parameters.debian_version }}.armhf
-      artifact_name: sonic-swss-${{ parameters.debian_version }}.armhf
-      archive_gcov: false
-
-  - template: .azure-pipelines/build-template.yml
-    parameters:
-      arch: arm64
-      timeout: 240
-      pool: sonicbld-arm64
-      sonic_slave: sonic-slave-${{ parameters.debian_version }}-arm64
-      common_lib_artifact_name: common-lib.arm64
-      swss_common_artifact_name: sonic-swss-common-${{ parameters.debian_version }}.arm64
-      sairedis_artifact_name: sonic-sairedis-${{ parameters.debian_version }}.arm64
-      artifact_name: sonic-swss-${{ parameters.debian_version }}.arm64
-      archive_gcov: false
-
-- stage: BuildDocker
-  dependsOn: Build
-  condition: succeeded('Build')
-  jobs:
-  - template: .azure-pipelines/build-docker-sonic-vs-template.yml
-    parameters:
-      swss_common_artifact_name: sonic-swss-common-${{ parameters.debian_version }}
-      sairedis_artifact_name: sonic-sairedis-${{ parameters.debian_version }}
-      swss_artifact_name: sonic-swss-${{ parameters.debian_version }}
-      artifact_name: docker-sonic-vs
-
-- stage: BuildDockerAsan
-  dependsOn: BuildAsan
-  condition: succeeded('BuildAsan')
-  jobs:
-  - template: .azure-pipelines/build-docker-sonic-vs-template.yml
-    parameters:
-      swss_common_artifact_name: sonic-swss-common-${{ parameters.debian_version }}
-      sairedis_artifact_name: sonic-sairedis-${{ parameters.debian_version }}
-      swss_artifact_name: sonic-swss-asan-${{ parameters.debian_version }}
-      artifact_name: docker-sonic-vs-asan
-      asan: true
-
-- stage: Test
-  dependsOn: BuildDocker
-  condition: succeeded('BuildDocker')
-  jobs:
-  - template: .azure-pipelines/test-docker-sonic-vs-template.yml
-    parameters:
-      log_artifact_name: log
-      gcov_artifact_name: sonic-gcov
-      sonic_slave: sonic-slave-${{ parameters.debian_version }}
-      archive_gcov: true
-
-- stage: TestAsan
-  dependsOn: BuildDockerAsan
-  condition: succeeded('BuildDockerAsan')
-  jobs:
-  - template: .azure-pipelines/test-docker-sonic-vs-template.yml
-    parameters:
-      log_artifact_name: log-asan
-      gcov_artifact_name: sonic-gcov
-      sonic_slave: sonic-slave-${{ parameters.debian_version }}
-      docker_sonic_vs_name: docker-sonic-vs-asan
-      asan: true
-
-- stage: Gcov
-  condition: false
-  dependsOn: Test
-  jobs:
-  - template: .azure-pipelines/gcov.yml
-    parameters:
-      arch: amd64
-      sonic_slave: sonic-slave-${{ parameters.debian_version }}
-      swss_common_artifact_name: sonic-swss-common-${{ parameters.debian_version }}
-      sairedis_artifact_name: sonic-sairedis-${{ parameters.debian_version }}
-      swss_artifact_name: sonic-swss-${{ parameters.debian_version }}
-      artifact_name: sonic-gcov
-      archive_gcov: true
+steps:
+  - bash: echo "Hello world"
