Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,8 +29,7 @@ jobs:
       source: specific
       project: build
       pipeline: puffc.sonic-buildimage
-      pipelineId: 90
-      artifact: target
+      artifact: sonic-buildimage.vs1
       allowPartiallySucceededBuilds: true
       path: $(Build.ArtifactStagingDirectory)/target/debs/bookworm
       patterns: |
