Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,7 @@ jobs:
       project: build
       pipeline: puffc.sonic-buildimage
       artifact: sonic-buildimage.vs1
+      buildVersionToDownload: latest
       allowPartiallySucceededBuilds: true
       path: $(Build.ArtifactStagingDirectory)/target/debs/bookworm
       patterns: |
