--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,7 @@ jobs:
       pipeline: puffc.sonic-buildimage
       artifact: sonic-buildimage.vs1
       buildVersionToDownload: latest
+      allowFailedBuilds: true
       allowPartiallySucceededBuilds: true
       path: $(Build.ArtifactStagingDirectory)/target/debs/bookworm
       patterns: |
