--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,8 +33,5 @@ jobs:
       buildVersionToDownload: latest
       allowFailedBuilds: true
       allowPartiallySucceededBuilds: true
-      path: $(Build.ArtifactStagingDirectory)/target/debs/bookworm
-      patterns: |
-        libswsscommon_1.0.0_amd64.deb
-        libswsscommon-dev_1.0.0_amd64.deb
+      path: $(Build.ArtifactStagingDirectory)/download/swsscommon
     displayName: "Download sonic swss common deb packages"
