--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,4 +34,7 @@ jobs:
       allowFailedBuilds: true
       allowPartiallySucceededBuilds: true
       path: $(Build.ArtifactStagingDirectory)/download/swsscommon
+      itemPattern: |
+        **/libswsscommon_1.0.0_*.deb
+        **/libswsscommon-dev_1.0.0_*.deb
     displayName: "Download sonic swss common deb packages"
