Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,3 +89,10 @@ jobs:
       rm -rf download
     workingDirectory: $(Build.ArtifactStagingDirectory)
     displayName: "Install libnl3, sonic swss common and sairedis"
+  - script: |
+      set -ex
+      tar czf pytest.tgz tests
+      cp -r pytest.tgz $(Build.ArtifactStagingDirectory)/
+      ./autogen.sh
+      dpkg-buildpackage -us -uc -b -j$(nproc) && cp ../*.deb .
+    displayName: "Compile sonic swss"
