--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,6 +79,19 @@ jobs:
         **/libnl-nf-3-dev_*.deb
         **/libyang_*.deb
     displayName: "Download common libs"
+  - task: DownloadPipelineArtifact@2
+    inputs:
+      source: specific
+      project: build
+      pipeline: puffc.sonic-buildimage
+      artifact: sonic-buildimage.vs1
+      buildVersionToDownload: latest
+      allowFailedBuilds: true
+      allowPartiallySucceededBuilds: true
+      path: $(Build.ArtifactStagingDirectory)/download/common
+      patterns: |
+        **/libdashapi*.deb
+    displayName: "Download dash api"    
   - script: |
       set -ex
       cd download
