--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -109,3 +109,122 @@ jobs:
       ./autogen.sh
       dpkg-buildpackage -us -uc -b -j$(nproc) && cp ../*.deb .
     displayName: "Compile sonic swss"
+  - publish: $(System.DefaultWorkingDirectory)/
+    artifact: sonic-swss-bookworm
+    displayName: "Archive swss debian packages"
+  - publish: $(Build.ArtifactStagingDirectory)/
+    artifact: sonic-swss-pytests
+    displayName: "Archive swss pytests"
+- job:
+  steps:
+  - task: DownloadPipelineArtifact@2
+    inputs:
+      source: specific
+      project: build
+      pipeline: puffc.sonic-buildimage
+      artifact: sonic-buildimage.vs1
+      buildVersionToDownload: latest
+      allowFailedBuilds: true
+      allowPartiallySucceededBuilds: true
+      path: $(Build.ArtifactStagingDirectory)/download/swsscommon
+      itemPattern: |
+        **/libswsscommon_1.0.0_*.deb
+        **/libswsscommon-dev_1.0.0_*.deb
+    displayName: "Download sonic swss common deb packages"
+  - task: DownloadPipelineArtifact@2
+    inputs:
+      source: specific
+      project: build
+      pipeline: puffc.sonic-buildimage
+      artifact: sonic-buildimage.vs1
+      buildVersionToDownload: latest
+      allowFailedBuilds: true
+      allowPartiallySucceededBuilds: true
+      path: $(Build.ArtifactStagingDirectory)/download/sairedis
+      itemPattern: |
+        **/libsaivs_*.deb
+        **/libsaivs-dev_*.deb
+        **/libsairedis_*.deb
+        **/libsairedis-dev_*.deb
+        **/libsaimetadata_*.deb
+        **/libsaimetadata-dev_*.deb
+        **/syncd-vs_*.deb
+    displayName: "Download sonic sairedis deb packages"
+  - task: DownloadPipelineArtifact@2
+    inputs:
+      source: specific
+      project: build
+      pipeline: puffc.sonic-buildimage
+      artifact: sonic-buildimage.vs1
+      buildVersionToDownload: latest
+      allowFailedBuilds: true
+      allowPartiallySucceededBuilds: true
+      path: $(Build.ArtifactStagingDirectory)/download/common
+      itemPattern: |
+        **/libnl-3-200_*.deb
+        **/libnl-3-dev_*.deb
+        **/libnl-genl-3-200_*.deb
+        **/libnl-genl-3-dev_*.deb
+        **/libnl-route-3-200_*.deb
+        **/libnl-route-3-dev_*.deb
+        **/libnl-nf-3-200_*.deb
+        **/libnl-nf-3-dev_*.deb
+        **/libyang_*.deb
+    displayName: "Download common libs"
+  - task: DownloadPipelineArtifact@2
+    inputs:
+      source: specific
+      project: build
+      pipeline: puffc.sonic-buildimage
+      artifact: sonic-buildimage.vs1
+      buildVersionToDownload: latest
+      allowFailedBuilds: true
+      allowPartiallySucceededBuilds: true
+      path: $(Build.ArtifactStagingDirectory)/download/common
+      patterns: |
+        **/libdashapi*.deb
+    displayName: "Download dash api"    
+  - task: DownloadPipelineArtifact@2
+    inputs:
+      artifact: sonic-swss-bookworm
+      path: $(Build.ArtifactStagingDirectory)/download
+    displayName: "Download pre-stage built sonic-swss-bookworm"
+  - task: DownloadPipelineArtifact@2
+    inputs:
+      source: specific
+      project: build
+      pipeline: puffc.sonic-buildimage
+      artifact: sonic-buildimage.vs1
+      buildVersionToDownload: latest
+      allowFailedBuilds: true
+      allowPartiallySucceededBuilds: true
+      path: $(Build.ArtifactStagingDirectory)/download
+      patterns: '**/target/docker-sonic-vs.gz'
+    displayName: "Download sonic-buildimage docker-sonic-vs"  
+  - script: |
+      set -ex
+      echo $(Build.DefinitionName).$(Build.BuildNumber)
+
+      docker load < $(Build.ArtifactStagingDirectory)/download/target/docker-sonic-vs.gz
+
+      mkdir -p .azure-pipelines/docker-sonic-vs/debs
+
+      find $(Build.ArtifactStagingDirectory)/download/sairedis -name '*.deb' -exec cp "{}" .azure-pipelines/docker-sonic-vs/debs \;
+      cp -v $(Build.ArtifactStagingDirectory)/download/*.deb .azure-pipelines/docker-sonic-vs/debs
+      if [ -f $(Build.ArtifactStagingDirectory)/download/coverage.info ]; then
+        cp -v $(Build.ArtifactStagingDirectory)/download/coverage.info $(Build.ArtifactStagingDirectory)/
+        cp -v $(Build.ArtifactStagingDirectory)/download/coverage.xml $(Build.ArtifactStagingDirectory)/
+      fi
+
+      pushd .azure-pipelines
+
+      build_dir=$(grep BUILD_DIR $(Build.ArtifactStagingDirectory)/download/build.info | cut -d= -f2)
+      build_args="--build-arg build_dir=$build_dir"
+
+      docker build $build_args --no-cache -t docker-sonic-vs:$(Build.DefinitionName).$(Build.BuildNumber) docker-sonic-vs
+
+      popd
+
+      docker save docker-sonic-vs:$(Build.DefinitionName).$(Build.BuildNumber) | gzip -c > $(Build.ArtifactStagingDirectory)/docker-sonic-vs.gz
+      rm -rf $(Build.ArtifactStagingDirectory)/download
+    displayName: "Build docker-sonic-vs"  
