--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -218,7 +218,9 @@ stages:
         mkdir -p .azure-pipelines/docker-sonic-vs/debs
 
         find $(Build.ArtifactStagingDirectory)/download/sairedis -name '*.deb' -exec cp "{}" .azure-pipelines/docker-sonic-vs/debs \;
-        cp -v $(Build.ArtifactStagingDirectory)/download/*.deb .azure-pipelines/docker-sonic-vs/debs
+        cp -v $(Build.ArtifactStagingDirectory)/download/common/target/debs/bookworm/*.deb .azure-pipelines/docker-sonic-vs/debs
+        cp -v $(Build.ArtifactStagingDirectory)/download/swsscommon/target/debs/bookworm/*.deb .azure-pipelines/docker-sonic-vs/debs
+
         if [ -f $(Build.ArtifactStagingDirectory)/download/coverage.info ]; then
           cp -v $(Build.ArtifactStagingDirectory)/download/coverage.info $(Build.ArtifactStagingDirectory)/
           cp -v $(Build.ArtifactStagingDirectory)/download/coverage.xml $(Build.ArtifactStagingDirectory)/
