--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,7 +88,7 @@ stages:
         buildVersionToDownload: latest
         allowFailedBuilds: true
         allowPartiallySucceededBuilds: true
-        path: $(Build.ArtifactStagingDirectory)/download/common
+        path: $(Build.ArtifactStagingDirectory)/download/common/target/debs/bullseye
         patterns: |
           **/libdashapi*.deb
       displayName: "Download dash api"    
@@ -96,8 +96,8 @@ stages:
         set -ex
         cd download
         sudo dpkg -i $(find common/target/debs/bullseye -type f -name '*.deb')
-        sudo dpkg -i $(find swsscommon/target/debs/bullseye -type f -name '*.deb')
-        sudo dpkg -i $(find sairedis/target/debs/bullseye -type f -name '*.deb')
+        sudo dpkg -i $(find swsscommon -type f -name '*.deb')
+        sudo dpkg -i $(find sairedis -type f -name '*.deb')
         cd ..
         rm -rf download
       workingDirectory: $(Build.ArtifactStagingDirectory)
