--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -208,7 +208,7 @@ stages:
         source: specific
         project: build
         pipeline: puffc.sonic-buildimage
-        artifact: sonic-buildimage.vs1
+        artifact: sonic-buildimage.vs
         buildVersionToDownload: latest
         allowFailedBuilds: true
         allowPartiallySucceededBuilds: true
